[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemies/EnemyBat/Bat/bat4.png" type="Texture" id=1]
[ext_resource path="res://Enemies/EnemyBat/Bat/bat5.png" type="Texture" id=2]
[ext_resource path="res://Enemies/EnemyBat/Bat/bat1.png" type="Texture" id=3]
[ext_resource path="res://Enemies/EnemyBat/Bat/bat2.png" type="Texture" id=4]
[ext_resource path="res://Enemies/EnemyBat/Bat/bat3.png" type="Texture" id=5]
[ext_resource path="res://Enemies/EnemyBat/EnemyBat.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]

[node name="EnemyBat" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -7 )
frames = SubResource( 1 )
playing = true

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 2 )

[node name="WallLeft" type="RayCast2D" parent="."]
position = Vector2( -9, 0 )
enabled = true
cast_to = Vector2( -5, 0 )

[node name="WallRight" type="RayCast2D" parent="."]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 5, 0 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 3 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
